[package]
name = "rtow-app"
version = "0.0.1"
authors = [ "Bobbbay <bobbbay.b@gmail.com>" ]
edition = "2021"

[dependencies]
lib = { path = "../lib", package = "rtow-lib" }
color-eyre = "0.6.1"
tracing = "0.1.34"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
indicatif = "0.16.2"
tokio = { version = "1.18.1", features = ["full"] }

[package.metadata.nix]
build = true
